versioned_docs/version-26.10/cma/cma-setup.md
---
id: cma-setup
title: Setting up the agent's environment
description: "Set up and configure Centreon Monitoring Agent on pollers and hosts"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import PollerAgentConfiguration from './_poller-agent-configuration.mdx';

## Step 1: Configure Centreon

This step is performed via the central server's interface. (It is also possible to perform these steps using [the Centreon Web API](https://docs-api.centreon.com/api/centreon-web/26.10/).)

### Install the Monitoring Connector you need

On your central server, install the monitoring connector which will provide the templates and commands you need to configure the hosts and services monitored in Centreon. 
In the case of a Cloud platform, these connectors are already installed.

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

1. On your central server, go to **Configuration > Connectors > Monitoring Connectors**.
2. [Install](../monitoring/pluginpacks.md#installing-a-monitoring-connector) the [**Linux Centreon Monitoring Agent**](/pp/integrations/plugin-packs/procedures/operatingsystems-linux-centreon-monitoring-agent) monitoring connector.

</TabItem>
<TabItem value="Windows" label="Windows">

1. On your central server, go to **Configuration > Connectors > Monitoring Connectors**.
2. [Install](../monitoring/pluginpacks.md#installing-a-monitoring-connector) the [**Windows Centreon Monitoring Agent**](/pp/integrations/plugin-packs/procedures/operatingsystems-windows-centreon-monitoring-agent) monitoring connector.

</TabItem>
</Tabs>

3. If you want to monitor a [CMA-supported application](cma.md#applications-you-can-monitor-with-cma), install the corresponding connector on your central server.

### Create an authentication token

1. Go to **Administration > Authentication tokens**.

2. Create a token with the **Centreon Monitoring Agent** type.

   * You can select an expiration time. By default, tokens do not expire.
   * Keep the token generated for the agent configuration. If necessary, you can copy it to the clipboard at any time from the list of tokens.
   * You can use just one token for all your pollers and agents, or manage several for more precise control.

#### CMA authentication token behavior: deactivation/expiration/revocation

<Tabs groupId="sync" queryString>
<TabItem value="Agent connects to poller" label="Agent connects to poller">

* The monitoring engine checks the presence and validity of the token, and disconnects if the token is missing (because it has been disabled or revoked) or has expired. The message **Token expired** appears in the [poller and agent logs](cma-troubleshooting.md#location-of-poller-and-agent-logs).

</TabItem>
<TabItem value="Poller connects to agent" label="Poller connects to agent">

* The agent checks the presence and validity of the token and disconnects if the token is missing (because it has been disabled or revoked) or has expired. The message **Token expired** appears in the [poller and agent logs](cma-troubleshooting.md#location-of-poller-and-agent-logs).

</TabItem>
</Tabs>

* When you disable or revoke a token, [deploy the configuration](../monitoring/monitoring-servers/deploying-a-configuration.md) for this action to take effect.

* Expiration takes effect immediately, without requiring any user action.

### Configure poller/agent communication

1. Go to the **Configuration > Pollers > Agent configurations** page, then click **Add**.
2. In the window that opens, select the **Centreon Monitoring Agent** agent type. Additional fields will appear.
3. Select the connection direction (default: the agent connects to the poller).
4. Select encryption mode

<Tabs groupId="sync" queryString>
<TabItem value="The agent connects to the poller" label="The agent connects to the poller">

5. In the **Parameters** section, select the poller(s) that will receive data from the agent.
6. Select **Create hosts automatically** if you want the poller to check whether incoming connections are from known hosts or not. If no host in the list of hosts has the same hostname, the host and its services will be created. Either the **OS-Windows-Centreon-Monitoring-Agent-custom** or the **OS-Linux-Centreon-Monitoring-Agent-custom** template will be applied. These values can be modified on the host, using the **host_template** parameter in the registry or the **centagent.json** configuration file.
7. In the **OTLP Receiver** section, enter the paths to the certificate files. See [dedicated page](cma-certificates.md) to determine which files are required, depending on your configuration and the connection direction you want.
   > If you are configuring multiple pollers at the same time, make sure that all certificate files have the same name.
8. Click **Save**.
9. [Deploy the configuration by restarting the collection engine](../monitoring/monitoring-servers/deploying-a-configuration.md).

</TabItem>
<TabItem value="The poller connects to the agent" label="The poller connects to the agent">

5. In the **Parameters** section, select the poller that will connect to the agents.
6. In the **Monitored Hosts** section, select the host you created earlier. Its IP address will be displayed, and a default port will be entered. Change this information if necessary.
7. Enter the paths to the certificate files. See the [dedicated page](cma-certificates.md) to determine which files are required, depending on your configuration and the connection direction you want.
8. Select the authentication token you created earlier. You can also create a token from this screen.
9. Add the host.
10. Repeat the operation for each host to be linked to this poller. To configure many hosts, we recommend using the dedicated APIs.
11. [Deploy the configuration by restarting the collection engine](../monitoring/monitoring-servers/deploying-a-configuration.md).

</TabItem>
</Tabs>

This configuration is deployed on the poller in the **/etc/centreon-engine/otl_server.json** file. Please note that this file should not be edited manually as it is overwritten each time the configuration is deployed.

### Create the host and services

This section applies:

* if the poller initiates the connection to the agent
* if the agent initiates the connection ro the poller but the option **Create hosts automatically** is not selected.

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

On the central server, [create the host](../monitoring/basic-objects/hosts.md) and apply the **OS-Linux-Centreon-Monitoring-Agent-custom** host template to it. The template includes the **Enable passive checks** option, which is set to **On**.

> Depending on the desired connection direction, the host's “Address” field will have no impact (connection initiated by the agent) or will be retrieved when the host is selected in the agent configuration (connection initiated by the poller).

Create the services associated with the host template.

</TabItem>
<TabItem value="Windows" label="Windows">

On the central server, [create the host](../monitoring/basic-objects/hosts.md) and apply the **OS-Windows-Centreon-Monitoring-Agent-custom** host template to it. The template includes the **Enable passive checks** option, which is set to **On**.

Create the services associated with the host template.

</TabItem>
</Tabs>

## Step 2: Prepare the poller

> Cloud: This step is not necessary if you want to use CMA with the **Central** poller.

This step is performed on the poller.

### Configure the firewall

<Tabs groupId="sync" queryString>
<TabItem value="The agent connects to the poller" label="The agent connects to the poller">

> These commands need to be adapted depending on the OS.

Run the following commands:

```bash
firewall-cmd --zone=public --add-port=4317/tcp --permanent
```

```bash
firewall-cmd --reload 
```

</TabItem>
<TabItem value="The poller connects to the agent" label="The poller connects to the agent">

No action is required.

</TabItem>
</Tabs>

### Configure encryption settings

See the [dedicated section](cma-certificates.md) to determine which files are required, depending on your configuration and the connection direction you need.

### Add CMA commands to your custom whitelists

If you are using whitelists on the poller, these must allow CMA commands. On the poller, in your custom whitelist file (e.g., **/etc/centreon-engine-whitelist/my-whitelist.yml**), include the following lines in the **cma-whitelist** block:

```text
whitelist:
  regex:
    - \/usr\/lib(64)?\/nagios\/plugins\/.*
    - \/usr\/lib(64)?\/nagios\/plugins\/.check_.*
    
cma-whitelist:
  default:
    regex:
      - \/usr\/lib(?:64)?\/nagios\/plugins\/.*
      - \/usr\/lib(?:64)?\/centreon\/plugins\/.*
      - \/usr\/lib(?:64)?\/centreon\/plugins\/check_centreon_bam.*
      - \"C:\/Program Files\/Centreon\/Plugins\/centreon_plugins.exe\"\s+.+
      - ^\{\s*"check":".*\}$
      - \/usr\/bin\/echo\s+Host\s+alive
      - cmd\.exe\s+\/C\s+echo\s+.*
```

If necessary, you can specify whitelists by host. The syntax will be:

```text
whitelist:
  regex:
    - \/usr\/lib(64)?\/nagios\/plugins\/.*
    - \/usr\/lib(64)?\/nagios\/plugins\/.check_.*
    
cma-whitelist:
  default:
    regex:
      - \/usr\/lib(?:64)?\/nagios\/plugins\/.*
      - \/usr\/lib(?:64)?\/centreon\/plugins\/.*
      - \/usr\/lib(?:64)?\/centreon\/plugins\/check_centreon_bam.*
      - \"C:\/Program Files\/Centreon\/Plugins\/centreon_plugins.exe\"\s+.+
      - ^\{\s*"check":".*\}$
      - \/usr\/bin\/echo\s+Host\s+alive
      - cmd\.exe\s+\/C\s+echo\s+.*
  hosts:
    - hostname:Host_1
    regex:
      - ...
      
    - hostname:Host_2
    regex:
      - ...
```

Make sure the correct access rigts are defined on all whitelist files:

```shell
chown root:centreon-engine /etc/centreon-engine-whitelist/my-whitelist.yml
chmod 0640 /etc/centreon-engine-whitelist/my-whitelist.yml
chown root:centreon-engine /etc/centreon-engine-whitelist
chmod 750 /etc/centreon-engine-whitelist
```

The behavior is as follows:

* If the **whitelist** block is filled in and the **cma-whitelist** block is absent, the monitoring engine will apply its whitelist (it will only allow the specified commands) and CMA will not apply a whitelist (all commands will be allowed).
* If both the **whitelist** and **cma-whitelist** blocks are filled in, the monitoring engine will apply the **whitelist** block and CMA will apply the **cma-whitelist** block (they will only allow the specified commands).
* If the **whitelist** block is absent and the **cma-whitelist** block is filled in, the monitoring engine will not apply a whitelist (all commands will be allowed) and CMA will apply the **cma-whitelist** block (it will only allow specified commands).  
* If no block is filled in, no whitelist will be applied: all commands will be allowed.

## Step 3: Prepare the host

This step is performed on the monitored host.

### Download and install the agent

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

#### Install the Centreon repository and the agent

Install the Centreon repository and agent using the following commands:

<Tabs groupId="sync" queryString>
<TabItem value="Alma / RHEL / Oracle Linux 8" label="Alma / RHEL / Oracle Linux 8">

```shell
dnf install -y dnf-plugins-core
dnf config-manager --add-repo https://packages.centreon.com/rpm-standard/26.10/el8/centreon-26.10.repo
dnf install  centreon-monitoring-agent
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 9" label="Alma / RHEL / Oracle Linux 9">

```shell
dnf install -y dnf-plugins-core
dnf config-manager --add-repo https://packages.centreon.com/rpm-standard/26.10/el9/centreon-26.10.repo
dnf install  compat-openssl11 centreon-monitoring-agent
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 10" label="Alma / RHEL / Oracle Linux 10">

```shell
dnf install -y dnf-plugins-core
dnf config-manager --add-repo https://packages.centreon.com/rpm-standard/26.10/el10/centreon-26.10.repo
dnf install  compat-openssl11 centreon-monitoring-agent
```

</TabItem>
<TabItem value="Debian 11, 12 & 13" label="Debian 11 ,12 & 13">

1. Execute the following commands:

```shell
apt-get update
apt-get -y install lsb-release gpg wget
echo "deb https://packages.centreon.com/apt-standard/ $(lsb_release -sc)-26.10-stable main" | tee -a /etc/apt/sources.list.d/centreon-26.10-stable.list
```

2. Import the repository key:

```shell
wget -O- https://apt-key.centreon.com | gpg --dearmor | tee /etc/apt/trusted.gpg.d/centreon.gpg > /dev/null 2>&1
```

3. Install the agent :

```shell
apt-get update
apt install centreon-monitoring-agent
```

</TabItem>
<TabItem value="Ubuntu 22.04 & 24.04" label="Ubuntu 22.04 & 24.04">

1. Execute the following commands:

```shell
apt-get update
apt-get -y install lsb-release gpg wget
echo "deb https://packages.centreon.com/ubuntu-standard/ $(lsb_release -sc)-26.10-stable main" | tee -a /etc/apt/sources.list.d/centreon-26.10-stable.list
```

2. Import the repository key:

```shell
wget -O- https://apt-key.centreon.com | gpg --dearmor | tee /etc/apt/trusted.gpg.d/centreon.gpg > /dev/null 2>&1
```

3. Install the agent :

```shell
apt-get update
apt install centreon-monitoring-agent
```

</TabItem>
</Tabs>

#### Configure **centreon-monitoring-agent**

Replace the contents of the **/etc/centreon-monitoring-agent/centagent.json** file with the following parameters :

<Tabs groupId="sync" queryString>
<TabItem value="Agent connects to poller" label="Agent connects to poller">

```json
{
  "log_level":"info",
  "endpoint":"<POLLER IP/DNS>:4317",
  "host":"host_1",
  "log_type":"file",
  "log_file":"/var/log/centreon-monitoring-agent/centagent.log" ,
  "encryption":<full/insecure>,
  "ca":"/tmp/ca_1234.crt",
  "ca_common_name":"",
  "token":"<TOKEN>"
}
```

</TabItem>
<TabItem value="Poller connects to agent" label="Poller connects to agent">

```json
{
  "log_level":"info",
  "endpoint":"0.0.0.0:4317",
  "host":"host_1",
  "log_type":"file",
  "log_file":"/var/log/centreon-monitoring-agent/centagent.log" ,
  "reversed_grpc_streaming":true,
  "encryption":<full/insecure>,
  "private_key":"/tmp/server_1234.key",
  "public_cert":"/tmp/server_1234.crt",
  "ca":"/tmp/ca_1234.crt",
  "token":"<TOKEN>"
}
```

</TabItem>
</Tabs>

> Important: in the **Host** field, enter the name of the host to be monitored as you entered it in the Centreon interface. If absent, the agent will use the machine's hostname. This name will be the matching key used to send data back to the Centreon host.

#### Configure encryption parameters

See [dedicated section](cma-certificates.md) to identify which files are required, depending on your configuration and direction. 

> When migrating from a previous version of CMA, the configured data is retained. Therefore, any encryption that is enabled will be considered “encryption:insecure.”
You can change this value as needed and restart the agent.

#### Configure the logs

You can configure two kinds of log output:

* file: the CMA logs into a file, the path is configured in the **log_file** option.
* stdout: standard output is used.

If you choose to log into a file, log rotation can be customized using the **log_max_file_size** and **log_max_files** options.

Allowed log levels are:

* off: no logs
* critical: critical errors
* error: all errors
* info: additional information
* debug: more information about connections
* trace: the most verbose trace level showing messages sent and received to the poller

#### Restart the agent

```shell
systemctl restart centagent
```

You can check that the agent is running using the following command:

```shell
systemctl status centagent
```

</TabItem>
<TabItem value="Windows" label="Windows">

[Download the CMA installer](https://download.centreon.com) (**Custom Platform** tab then **Monitoring Agent** tab), on every server you want to monitor.

The CMA installer can be executed in 2 modes:

<Tabs groupId="sync" queryString>
<TabItem value="Interactive mode" label="Interactive mode">

> The installer must be launched with the “Run as administrator” option.

1. Start the installer (during the configuration, you can click on the (i) icons for help).
   If you choose to install **centreon-plugins**, the installer will try to download and install the latest version of the Centreon plugins. If it can't (no web connection, network issue...), a popup is displayed to ask confirmation before using embedded plugins. If you only want to use native checks, there is no need to install the plugins.
  
   Results are displayed in the installer's window.

2. Configure the endpoint and the connection direction:
   * **Host name in Centreon**. This must be the name of the host as you have defined it in the Centreon interface.
     > Warning : This name will be the unique key for mapping data to the right Centreon host. It must be strictly identical to the Centreon host name (case sensitive).

<Tabs groupId="sync" queryString>
<TabItem value="Agent connects to poller" label="Agent connects to poller">

   * In **Poller endpoint**, enter the poller's IP/DNS, followed by CMA listening port, usually 4317. For example, 192.168.45.32:4317.

</TabItem>
<TabItem value="Poller connects to agent" label="Poller connects to agent">

   * **Listening interface** can keep the default value (0.0.0.0:4317) and will be the interface through which the agent accepts incoming connections from the poller. (0.0.0.0) means 'all interfaces'. You can restrict this value for security reasons.

</TabItem>
</Tabs>

</TabItem>
<TabItem value="Silent mode" label="Silent mode (console)">

In this mode, there is no interface. As this installer is not a console program, it returns immediately despite not having finished. You have to wait for a message telling you that all is finished.
If you want to have an exit status, you can launch the installer in a powershell session and wait for the exit code. The exit code will be 0 if all is right.

To run it in silent mode, you must specify **/VERYSILENT** as the first argument.
You can display a list of arguments with the following command line:

```shell
centreon-monitoring-agent.exe /VERYSILENT /HELP
```

Available parameters are : 

| flag             | description                                                                                                                                                                                                                                                                                                                                                                                                                                 | mandatory                                         |
|------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------| 
| /COMPONENTS      | Components to install. "agent", "plugins" or "agent,plugins"                                                                                                                                                                                                                                                                                                                                                                                | X                                                 |
| /AGENTINSTANCE   | Agent instance name (service name). If omitted, the installer auto-generates a name (e.g., CentreonMonitoringAgent)                                                                                                                                                                                                                                                                                                                         |                                                   |
| /HOST            | The name of the host as defined in the Centreon interface. This name will be the matching key used to retrieve data on the Centreon host.                                                                                                                                                                                                                                                                                                   | X                                                 |
| /ENDPOINT        | IP address of DNS name of the poller the agent will connect to. In case of Poller-initiated connection mode (/REVERSE=true), it is the interface and port on which the agent will accept connections from the poller. 0.0.0.0 means all interfaces. The format is (IP or DNS name):(port) , you must choose the interface (all interfaces: 0.0.0.0) and the port (usually 4317) on which the agent will accept connections from the poller. |                                                   |
| X                |                                                                                                                                                                                                                                                                                                                                                                                                                                             |                                                   |
| /TOKEN           | Authentication token                                                                                                                                                                                                                                                                                                                                                                                                                        | X                                                 |
| /PLUGINSRC       | Source of installation for Centreon plugins. "auto": via the internet, "embedded": local version. Default: "auto"                                                                                                                                                                                                                                                                                                                           |                                                   | 
| /REVERSE         | Connection initiated by the poller. "true" or "false". Default: "false"                                                                                                                                                                                                                                                                                                                                                                     |                                                   |
| /ENCRYPTION      | Encryption mode. "no", "full", "insecure". Default: "no"                                                                                                                                                                                                                                                                                                                                                                                    |                                                   |
| /CERT            | Path to the file containing the public key                                                                                                                                                                                                                                                                                                                                                                                                  | if ENCRYPTION=full or insecure, and /REVERSE=true |
| /KEY             | Path to the file containing the private key                                                                                                                                                                                                                                                                                                                                                                                                 | if ENCRYPTION=full or insecure, and /REVERSE=true |
| /CA              | Path to the file containing the trusted certificate                                                                                                                                                                                                                                                                                                                                                                                         |                                                   |
| /COMMONNAME      | CA common name. If ENCRYPTION=insecure                                                                                                                                                                                                                                                                                                                                                                                                      |                                                   |
| /LOGTYPE         | "event-log" or "file". Default: "event-log"                                                                                                                                                                                                                                                                                                                                                                                                 |                                                   |
| /LOGFILE         | Path to the log file                                                                                                                                                                                                                                                                                                                                                                                                                        | if /LOGTYPE=file                                  |
| /LOGLEVEL        | "off","critical","error","warning","info","debug","trace". Default: "error"                                                                                                                                                                                                                                                                                                                                                                 | if /LOGTYPE=file                                  |
| /MAXFILESIZE     | Maximum size of the log file before rotation, in MB. Default: 10. If /LOGTYPE=file                                                                                                                                                                                                                                                                                                                                                          |                                                   |
| /MAXNUMBER       | Maximum number of log files. Both of these parameters are required for log rotation to be enabled. Default: 3. If /LOGTYPE=file                                                                                                                                                                                                                                                                                                             |                                                   |
| /CUSTOMCHECKFILE | Path to custom commands file, if you have one.                                                                                                                                                                                                                                                                                                                                                                                              |                                                   |
| /VERSION         | Version of centagent.exe                                                                                                                                                                                                                                                                                                                                                                                                                    |                                                   |                                                                                                                                                                                                                                                      
                                                                                         
If **/PLUGINSRC=auto** and the download fails, the installer will automatically switch to **embedded** mode.

Silent mode execution errors and the output of /VERSION are written to ./installer_output.log.

*Command examples*

Minimal command (required parameters):

```shell
centreon-monitoring-agent-xxx.exe /VERYSILENT /COMPONENTS=agent,plugins /HOST=host_1 /ENDPOINT=localhost:4317 /TOKEN=token_value
```

Command with optional parameters : 
```shell
centreon-monitoring-agent-xxx.exe /VERYSILENT /REVERSE /COMPONENTS=agent /HOST=agent1 /ENDPOINT=127.0.0.1:4317 /LOGTYPE=File /LOGLEVEL=Debug /LOGFILE="C:\Logs\agent.log" /MAXFILESIZE=20 /MAXNUMBER=5 /ENCRYPTION=full /CERT="C:\certs\agent.crt" /KEY="C:\certs\agent.key" /CA="C:\certs\ca.crt" /COMMONNAME=centreon /TOKEN=token_value
So
```

</TabItem>
</Tabs>

#### Configuration data

Data defined through the installer or silent mode is stored in the registry:

```
\HKEY_LOCAL_MACHINE\SOFTWARE\Centreon\CentreonMonitoringAgent
```

#### Configure encryption parameters

See [dedicated section](cma-certificates.md) to identify which files are required, depending on your configuration and direction. 

> When migrating from a previous version of CMA, the configured data is retained. Therefore, any encryption that is enabled will be considered “encryption”:insecure.
You can change this value as needed and restart the agent.

#### Configure the logs

You can configure two kinds of log output:
  * **eventlog**: the CMA logs in the Windows Event Viewer .
  * **file**: the CMA logs into a file

  If you choose to log into a file, log rotation can be customized using the **log_max_file_size** and **log_max_files** options.

  Allowed log levels are:
  * off: no logs
  * critical: critical errors
  * error: all errors
  * info: additional information
  * debug: more information about connections
  * trace: the most verbose trace level showing messages sent and received to the poller.

</TabItem>
</Tabs>

### Deploy the Centreon plugin on the host (Linux)

If you are using Centreon connectors and non-native controls on Linux:

1. Enable our plugins repository and install the plugins:

This repository will provide you our packaged plugins as well as **the dependencies that are not available in the
standard distribution repositories**.

<Tabs groupId="sync" queryString>
<TabItem value="Alma / RHEL / Oracle Linux 8" label="Alma / RHEL / Oracle Linux 8">

```bash
dnf -y install dnf-plugins-core epel-release
dnf config-manager --set-enabled powertools

cat >/etc/yum.repos.d/centreon-plugins.repo <<'EOF'
[centreon-plugins-stable]
name=Centreon plugins repository.
baseurl=https://packages.centreon.com/rpm-plugins/el8/stable/$basearch/
enabled=1
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-stable-noarch]
name=Centreon plugins repository.
baseurl=https://packages.centreon.com/rpm-plugins/el8/stable/noarch/
enabled=1
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-testing]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el8/testing/$basearch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-testing-noarch]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el8/testing/noarch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-unstable]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el8/unstable/$basearch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-unstable-noarch]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el8/unstable/noarch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1
EOF
```

2. Install the plugin:

```bash
dnf install -y centreon-plugin-Operatingsystems-Linux-Local.noarch
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 9" label="Alma / RHEL / Oracle Linux 9">

```bash
dnf install dnf-plugins-core
dnf install epel-release
dnf config-manager --set-enabled crb

cat >/etc/yum.repos.d/centreon-plugins.repo <<'EOF'
[centreon-plugins-stable]
name=Centreon plugins repository.
baseurl=https://packages.centreon.com/rpm-plugins/el9/stable/$basearch/
enabled=1
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-stable-noarch]
name=Centreon plugins repository.
baseurl=https://packages.centreon.com/rpm-plugins/el9/stable/noarch/
enabled=1
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-testing]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el9/testing/$basearch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-testing-noarch]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el9/testing/noarch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-unstable]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el9/unstable/$basearch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-unstable-noarch]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el9/unstable/noarch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1
EOF
```

2. Install the plugin:

```bash
dnf install -y centreon-plugin-Operatingsystems-Linux-Local.noarch
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 10" label="Alma / RHEL / Oracle Linux 10">

```bash
dnf install -y dnf-plugins-core
dnf install -y epel-release
dnf config-manager --set-enabled crb

cat >/etc/yum.repos.d/centreon-plugins.repo <<'EOF'
[centreon-plugins-stable]
name=Centreon plugins repository.
baseurl=https://packages.centreon.com/rpm-plugins/el10/stable/$basearch/
enabled=1
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-stable-noarch]
name=Centreon plugins repository.
baseurl=https://packages.centreon.com/rpm-plugins/el10/stable/noarch/
enabled=1
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-testing]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el10/testing/$basearch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-testing-noarch]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el10/testing/noarch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-unstable]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el10/unstable/$basearch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1

[centreon-plugins-unstable-noarch]
name=Centreon plugins repository. (UNSUPPORTED)
baseurl=https://packages.centreon.com/rpm-plugins/el10/unstable/noarch/
enabled=0
gpgcheck=1
gpgkey=https://yum-gpg.centreon.com/RPM-GPG-KEY-CES
module_hotfixes=1
EOF
```

2. Install the plugin:

```bash
dnf install -y centreon-plugin-Operatingsystems-Linux-Local.noarch
```

> NB: on some minimal docker images, it may be necessary to install this package:
> ```bash
> dnf install procps-ng
> ```

</TabItem>
<TabItem value="Debian 11 & 12" label="Debian 11 & 12">

```bash
apt update && apt install lsb-release ca-certificates apt-transport-https software-properties-common wget gnupg2 curl

wget -O- https://apt-key.centreon.com | gpg --dearmor | tee /etc/apt/trusted.gpg.d/centreon.gpg > /dev/null 2>&1
echo "deb https://packages.centreon.com/apt-plugins-stable/ $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/centreon-plugins.list
apt-get update
```

2. Install the plugin:

```bash
apt -y install centreon-plugin-operatingsystems-linux-local
```

</TabItem>
<TabItem value="Debian 13" label="Debian 13">

```bash
apt update && apt install lsb-release ca-certificates apt-transport-https wget gnupg2 curl

wget -O- https://apt-key.centreon.com | gpg --dearmor | tee /etc/apt/trusted.gpg.d/centreon.gpg > /dev/null 2>&1
echo "deb https://packages.centreon.com/apt-plugins-stable/ $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/centreon-plugins.list
apt-get update
```

2. Install the plugin:

```bash
apt -y install centreon-plugin-operatingsystems-linux-local
```

</TabItem>
<TabItem value="Ubuntu 22.04 & 24.04" label="Ubuntu 22.04 & 24.04">

```bash
apt update && apt install lsb-release ca-certificates apt-transport-https software-properties-common wget gnupg2 curl

wget -O- https://apt-key.centreon.com | gpg --dearmor | tee /etc/apt/trusted.gpg.d/centreon.gpg > /dev/null 2>&1
echo "deb https://packages.centreon.com/ubuntu-plugins-stable/ $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/centreon-plugins.list
apt-get update
```

2. Install the plugin:

```bash
apt -y install centreon-plugin-operatingsystems-linux-local
```

</TabItem>
</Tabs>

3. Create the directory needed for the plugins cache:

```bash
mkdir -p /var/lib/centreon/centplugins
chown centreon-monitoring-agent: /var/lib/centreon/centplugins
```

### Configuring multiple agent instances on the same host

#### General principle

You can configure multiple CMA services on a host, for example to communicate with different Centreon pollers/platforms (test/production) monitoring the same host.

An instance consists of:
* a service
* its configuration

The name of the instance must be unique on the same host.

Each instance has its own configuration and executes it independently of other instances.

#### Configuration

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

The configuration for each instance is stored in a dedicated JSON file on the host.
The file name must be unique.

```shell
/etc/centreon-monitoring-agent/centagent1.json
```

</TabItem>
<TabItem value="Windows" label="Windows">

The configuration of each instance is stored in a dedicated registry key with a unique name.

```shell
Ordinateur\HKEY_LOCAL_MACHINE\SOFTWARE\Centreon\NomDuService
```

</TabItem>
</Tabs>

#### Deploying a named instance

> Running multiple instances configured with the same \<endpoint; host\> pair will cause duplicate metrics in the database for that host. It is mandatory to change the endpoint and/or host values when deploying a new instance.

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

1. Make a copy of the configuration file created during the initial deployment of CMA.

```shell
cp  /etc/centreon-monitoring-agent/centagent.json /etc/centreon-monitoring-agent/centagent1.json
```

2. Give the file the appropriate permissions:

```shell
chmod 0644 /etc/centreon-monitoring-agent/centagent1.json
chown centreon-monitoring-agent:centreon-monitoring-agent /etc/centreon-monitoring-agent/centagent1.json
```

3. Make sure you modify the value of 'endpoint' and, if necessary, the rest of the configuration for the new instance in the created file (for example, to change the log level or the certificate path).

4. Make a copy of the service created during the first CMA deployment.

```shell
cp /lib/systemd/system/centagent.service /lib/systemd/system/centagent1.service
```

5. In this new file, modify the path in **ExecStart** to point to the new json file.

```shell
...
[Service]
ExecStart=/usr/bin/centagent /etc/centreon-monitoring-agent/centagent1.json
ExecReload=/bin/kill -HUP $MAINPID
...
```

6. Give the service the appropriate rights:

```shell
chmod 0644 /lib/systemd/system/centagent1.service
chown centreon-monitoring-agent:centreon-monitoring-agent /lib/systemd/system/centagent1.service
```

7. Register the new service:

```shell
systemctl daemon-reload
systemctl unmask centagent1
systemctl preset centagent1
systemctl enable centagent1
systemctl restart centagent1
```

</TabItem>
<TabItem value="Windows" label="Windows">

<Tabs groupId="sync" queryString>
<TabItem value="Interactive mode" label="Interactive mode">

When the installer is run, the **Agent instance** field suggests a default (unique) instance name that can be modified.
It will be used as the service name and registry key.

</TabItem>
<TabItem value="Silent mode" label="Silent mode (console)">

Each time the service is run, a new instance is created with an incremental name such as ‘CentreonMonitoringAgent1’, ‘CentreonMonitoringAgent2’.
If you want to give the service a different name (the name must be unique), use the **/AGENTINSTANCE** parameter. This name will be used as the service name and registry key.

```shell
centreon-monitoring-agent-xxx.exe /VERYSILENT /AGENTINSTANCE="ServiceName"  /COMPONENTS=agent,plugins /HOST=host_1 /ENDPOINT=localhost:4317 /TOKEN=token_value 
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

#### Editing a named instance

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

1. Make the desired changes in the JSON file for the instance.
2. Restart the corresponding service.

```shell
systemctl restart centagent1
```

</TabItem>
<TabItem value="Windows" label="Windows">

<Tabs groupId="sync" queryString>
<TabItem value="Interactive mode" label="Interactive mode">

Run **centreon-monitoring-agent-modify.exe**, located in the CMA installation directory.
The **Agent instance** field defaults to the first instance found and can be modified.
Any subsequent changes will apply to the selected instance.

</TabItem>
<TabItem value="Silent mode" label="Silent mode (console)">

Run **centreon-monitoring-agent-modify.exe** in silent mode.

> In this context, the **/AGENTINSTANCE** parameter is mandatory.

```shell
centreon-monitoring-agent-modify.exe /VERYSILENT /AGENTINSTANCE="ServiceName"
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

#### Uninstalling a named instance

See [**Uninstalling the agent**](#uninstalling-the-agent).

### Updating an existing configuration

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

1. Edit the following file: **/etc/centreon-monitoring-agent/centagent.json**.
2. Restart the agent.

```shell
systemctl restart centagent
```

</TabItem>
<TabItem value="Windows" label="Windows">

Run **centreon-monitoring-agent-modify.exe**, located in the CMA installation directory.

This is also possible in silent mode:

```shell
centreon-monitoring-agent-modify.exe /VERYSILENT /AGENTINSTANCE "ServiceName"
```

</TabItem>
</Tabs>

### Updating the agent

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

Update the agent using your package manager.

<Tabs groupId="sync" queryString>
<TabItem value="Alma / RHEL / Oracle Linux 8" label="Alma / RHEL / Oracle Linux 8">

```shell
dnf update centreon-monitoring-agent
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 9" label="Alma / RHEL / Oracle Linux 9">

```shell
dnf update centreon-monitoring-agent
```

</TabItem>
<TabItem value="Alma / RHEL / Oracle Linux 10" label="Alma / RHEL / Oracle Linux 10">

```shell
dnf update centreon-monitoring-agent
```

</TabItem>
<TabItem value="Debian 11, 12 & 13" label="Debian 11 ,12 & 13">

```shell
apt-get update && apt-get upgrade centreon-monitoring-agent
```

</TabItem>
<TabItem value="Ubuntu 22.04 & 24.04" label="Ubuntu 22.04 & 24.04">

```shell
apt-get update && apt-get upgrade centreon-monitoring-agent
```

</TabItem>
</Tabs>

Then restart the agent:

```shell
systemctl restart centagent
```

</TabItem>
<TabItem value="Windows" label="Windows">

[Download the new CMA installer](https://download.centreon.com) (**Custom Platform** tab then **Monitoring Agent** tab).

<Tabs groupId="sync" queryString>
<TabItem value="Interactive mode" label="Interactive mode">

> The installer must be launched with the "Run as administrator" option.

1. Launch the installer. Since at least one CMA instance is already installed, the first screen offers two options:
   * **Install**: updates the agent binaries only. The existing configuration is preserved.
   * **Update**: allows you to update both the agent binaries and the configuration. Select the instance to update — the configuration fields are pre-filled with the current values and can be modified.
2. Select **Update**, choose the instance to update, adjust the configuration if needed, and complete the wizard.

</TabItem>
<TabItem value="Silent mode" label="Silent mode (console)">

Use the `/UPDATEONLY` flag to update an existing instance. The `/AGENTINSTANCE` parameter specifies the instance to update:

```shell
centreon-monitoring-agent-xxx.exe /VERYSILENT /UPDATEONLY /AGENTINSTANCE="ServiceName"
```

This updates both the agent binaries and the configuration of the specified instance.

</TabItem>
</Tabs>

</TabItem>
</Tabs>

### Uninstalling the agent

<Tabs groupId="sync" queryString>
<TabItem value="Linux" label="Linux">

To uninstall an instance, run the following commands, adapting the name of the service and configuration file:

```shell
systemctl stop centagent1
rm /lib/systemd/system/centagent1.service
rm /etc/centreon-monitoring-agent/centagent1.json
systemctl daemon-reload
```

* To completely uninstall CMA (all instances and user groups), run the following commands (**for each instance**, if multiple instances are deployed):

```shell
systemctl stop centagent centagent
rm /lib/systemd/system/centagent.service /lib/systemd/system/centagent.service
rm /etc/centreon-monitoring-agent/centagent.json /etc/centreon-monitoring-agent/centagent.json
```

Then run the following commands:

```shell
systemctl daemon-reload
deluser centreon-monitoring-agent
delgroup centreon-monitoring-agent
```

</TabItem>
<TabItem value="Windows" label="Windows">

<Tabs groupId="sync" queryString>
<TabItem value="Interactive mode" label="Interactive mode">

Run **unins000.exe**, located in the CMA installation directory.
The list of instances is displayed with the plugins, and you can select the items to uninstall.

</TabItem>
<TabItem value="Silent mode" label="Silent mode (console)">

Run **unins000.exe** in silent mode, and specify one of the three possible options.

* /FULL: all instances are uninstalled, as well as plugins
* /PLUGINS: plugins are uninstalled
* /AGENTINSTANCE=SERVICENAME1,SERVICENAME2: the specified instance(s) is/are uninstalled.

```shell
unins000.exe /VERYSILENT /FULL
unins000.exe /VERYSILENT /PLUGINS
unins000.exe /VERYSILENT /AGENTINSTANCE=SERVICENAME1,SERVICENAME2
```

</TabItem>
</Tabs>
</TabItem>
</Tabs>

## Step 4: Test if the agent works

See [dedicated section](cma-troubleshooting.md).
